# assigment2dsai413

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-colab.txt  requirements.txt
configs/: biomedclip.yaml  colpali.yaml  data.yaml  eval.yaml  medgemma.yaml
data/: README.md
docs/: architecture.md  ethics.md  kaggle_setup.md
notebooks/: 00_colab_full_pipeline.ipynb  00_kaggle_full_pipeline.ipynb  01_data_exploration.ipynb  02_qa_dataset_build.ipynb  03_colpali_lora_train.ipynb  03_colpali_lora_train_kaggle.ipynb  04_eval_report_mode.ipynb  05_eval_qa_mode.ipynb  06_results_figures.ipynb  07_gradio_demo_kaggle.ipynb  colabpart1.ipynb  kaggle_gradio_demo.ipynb  kaggle_main.ipynb
report/: demo_video_link.md  report.md
results/tables/: qa_metrics.csv  report_metrics.csv  retrieval_metrics.csv
scripts/: build_indices.py  build_qa_dataset.py  colab_bootstrap.sh  download_data.py  run_eval.py  train_colpali_lora.py
src/cxr_intel/: __init__.py
src/cxr_intel/app/: cache.py  streamlit_app.py
src/cxr_intel/app/components/: heatmap.py
src/cxr_intel/app/pages/: 1_Report_Generation.py  2_QA_Mode.py  3_Compare_Models.py
src/cxr_intel/data/: __init__.py  chexpert_labels.py  kaggle_loader.py  preprocess.py  splits.py
src/cxr_intel/eval/: __init__.py  llm_judge.py  metrics_qa.py  metrics_report.py  metrics_retrieval.py
src/cxr_intel/finetune/: __init__.py  collator.py  pair_builder.py  train_colpali_lora.py
src/cxr_intel/generation/: __init__.py  prompts.py  qa_pipeline.py  report_pipeline.py
src/cxr_intel/models/: __init__.py  llm_router.py  medgemma_runner.py
src/cxr_intel/qa_dataset/: __init__.py  schema.py  synth_generator.py  templates.py  validator.py
src/cxr_intel/retrieval/: __init__.py  base.py  biomedclip_index.py  colpali_index.py  colpali_search.py
src/cxr_intel/utils/: __init__.py  io.py  logging.py  viz.py
tests/: test_chexpert_labels.py  test_eval_metrics.py  test_preprocess.py  test_prompts.py  test_qa_validator.py
