[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cxr-intel"
version = "0.1.0"
description = "Multi-Modal Chest X-Ray Intelligence System (Report Generation + RAG QA)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DSAI 413 Student" }]
keywords = ["medical-ai", "chest-xray", "rag", "colpali", "medgemma", "multimodal"]

dependencies = [
    "torch>=2.4.0",
    "transformers>=4.50.0",
    "accelerate>=1.1.0",
    "peft>=0.15.0",
    "bitsandbytes>=0.44.0",
    "colpali-engine>=0.3.10",
    "open_clip_torch>=2.29.0",
    "faiss-cpu>=1.8.0",
    "pillow>=10.4.0",
    "pydicom>=2.4.4",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "kaggle>=1.6.17",
    "rapidfuzz>=3.10.0",
    "tenacity>=9.0.0",
    "openai>=1.55.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.9.0",
    "plotly>=5.24.0",
    "streamlit>=1.40.0",
    "bert-score>=0.3.13",
    "sacrebleu>=2.4.3",
    "rouge-score>=0.1.2",
    "nltk>=3.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-cov>=5.0.0", "ruff>=0.7.0"]
notebook = ["jupyterlab>=4.3.0", "ipywidgets>=8.1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cxr_intel" = ["*.yaml", "*.json"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
