[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cxr-intel"
version = "0.1.0"
description = "Multi-Modal Chest X-Ray Intelligence System (Report Generation + RAG QA) — DSAI 413 Assignment 2"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "DSAI 413 Student" }]
keywords = ["medical-ai", "chest-xray", "rag", "colpali", "medgemma", "multimodal"]

# Stack pinned to the combo that worked end-to-end on Kaggle T4×2:
# transformers 4.47.1 (gemma3 not needed in source — we use the runtime patch in the
# notebook to bump transformers ≥4.50 for MedGemma's gemma3 architecture and patch
# ColPali's v1.3 adapter for the renamed module paths).
dependencies = [
    "torch>=2.4.0",
    "transformers>=4.47.1",
    "accelerate>=1.1.0",
    "peft>=0.13.2",
    "bitsandbytes>=0.44.0",
    "colpali-engine>=0.3.7",
    "open_clip_torch>=2.29.0",
    "faiss-cpu>=1.8.0",
    "pillow>=10.4.0",
    "pydicom>=2.4.4",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "kaggle>=1.6.17",
    "rapidfuzz>=3.10.0",
    "tenacity>=9.0.0",
    "openai>=1.55.0",
    "tqdm>=4.66.0",
    "bert-score>=0.3.13",
    "sacrebleu>=2.4.3",
    "rouge-score>=0.1.2",
    "nltk>=3.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]
